--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,17 @@
     tools:context=".MainActivity">
 
     <Button
+        android:id="@+id/kolejka"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Użyj kolejki"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.669" />
+
+    <Button
         android:id="@+id/bt1_st4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
