--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,18 @@
     tools:context=".MainActivity">
 
     <Button
+        android:id="@+id/bt1_st6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Ostatni element"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.56" />
+
+    <Button
         android:id="@+id/kolejka"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -21,7 +33,7 @@
         android:id="@+id/bt1_st4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Ostatni element"
+        android:text="Wszystkie"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.932"
@@ -66,7 +78,7 @@
         app:layout_constraintVertical_bias="0.355" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/title"
         android:layout_width="171dp"
         android:layout_height="31dp"
         android:text="STOS"
